--- a/src/server_manager/ui_components/outline-cloud-instructions-view.html
+++ b/src/server_manager/ui_components/outline-cloud-instructions-view.html
@@ -24,7 +24,7 @@
 
       }
       .container {
-        border: 1px solid rgba(0,0,0,0.12);
+        border: 1px solid var(--border-color);
         padding-bottom: 12px;
       }
       .header {
@@ -43,11 +43,10 @@
       }
       .title {
         font-size: 16px;
-        color: rgba(0,0,0,0.87);
       }
       .thumbnail {
-        width: 502px;
-        height: 298px;
+        width: 480px;
+        height: 288px;
         margin-bottom: 24px;
       }
       .overlay {
@@ -68,8 +67,8 @@
         opacity: 0.57;
       }
       .instructions {
+        color: var(--light-gray);
         font-size: 16px;
-        color: rgba(0,0,0,0.87);
         line-height: 24px;
       }
     </style>
