--- a/src/server_manager/ui_components/outline-manual-server-entry.html
+++ b/src/server_manager/ui_components/outline-manual-server-entry.html
@@ -33,17 +33,17 @@
         text-align: center;
       }
       .card {
-        background: #FFFFFF;
-        box-shadow: 0 0 2px 0 rgba(0,0,0,0.14), 0 2px 2px 0 rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);
-        border-radius: 2px;
-        margin: 24px;
+        color: var(--light-gray);
+        margin: 24px 0;
         text-align: left;
       }
       .card-section {
         padding: 24px 12px;
+        background: var(--background-contrast-color);
+        border-radius: 2px;
       }
       .card-section:not(:first-child) {
-        border-top: 1px solid rgba(0,0,0,0.12);;
+        margin-top: 8px;
       }
       .section-header {
         padding: 0 6px 0;
@@ -51,7 +51,6 @@
       }
       .instructions {
         font-size: 16px;
-        color: rgba(0,0,0,0.87);
         line-height: 26px;
         margin-left: 16px;
         flex: 2;
@@ -60,12 +59,11 @@
         height: 26px;
         width: 26px;
         font-size: 14px;
-        background-color: rgba(0, 0, 0, 0.34);
         border-radius: 50%;
         float: left;
         vertical-align: middle;
-        color: #fff;
-        background-color: #141414;
+        color: #000;
+        background-color: #fff;
         margin: auto;
         text-align: center;
         line-height: 26px;
@@ -100,7 +98,7 @@
       }
       .code {
         background-color: #ECEFF1;
-        color: rgba(0,0,0,0.87);
+        color: var(--dark-gray);
         font-size: 14px;
         font-family: RobotoMono-Regular, monospace;
         line-height: 24px;
@@ -124,6 +122,7 @@
         display: flex;
         justify-content: space-between;
         padding: 0 24px 24px 60px;
+        background-color: var(--background-contrast-color);
       }
       paper-button {
         margin: 0;
@@ -132,16 +131,17 @@
         margin: 0;
       }
       #cancelButton {
-        border: 1px solid rgba(0,0,0,0.12);
+        color: var(--light-gray);
+        border: 1px solid var(--border-color);
         border-radius: 2px;
         width: 45%;
       }
       #doneButton {
-        box-shadow: 0 0 2px 0 rgba(0,0,0,0.14), 0 2px 2px 0 rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);
+        box-shadow: 0 0 2px 0 rgba(255,255, 255, 0.14), 0 2px 2px 0 rgba(255,255, 255, 0.12), 0 1px 3px 0 rgba(255,255, 255, 0.20);
         border-radius: 2px;
         width: 45%;
-        background-color: #1DE9B6;
-        color: rgba(0,0,0,0.87);
+        background-color: var(--primary-green);
+        color: var(--light-gray);
       }
       #aws-logo {
         vertical-align: top;
@@ -245,7 +245,7 @@
             <div class="instructions">Paste your installation output here.</div>
           </div>
           <div class="section-content">
-            <textarea id="serverConfig" type="text" placeholder$="[[placeholderText]]" class="code" rows="3"></textarea>
+            <textarea id="serverConfig" type="text" placeholder$="[[placeholderText]]" class="code" rows="4"></textarea>
           </div>
         </div>
         <div id="button-row">
@@ -254,21 +254,11 @@
         </div>
       </div>
     </outline-step-view>
-
-    <paper-dialog id='errorDialog' modal>
-      <h3 hidden$='[[!errorTitle]]'>[[errorTitle]]</h3>
-      <div style="text-align: left">[[errorText]]</div>
-      <div class="buttons">
-        <paper-button dialog-dismiss autofocus>Cancel</paper-button>
-        <paper-button on-tap='retryTapped' dialog-dismiss>Retry</paper-button>
-      </div>
-    </paper-dialog>
   </template>
   <script>
     Polymer({
       is: 'outline-manual-server-entry',
       properties: {
-        errorText: String,
         placeholderText: {
           type: String,
           value: '{"apiUrl":"https://xxx.xxx.xxx.xxx:xxxxx/xxxxxxxxxxxxxxxxxxxxxx","certSha256":"xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"}'
@@ -296,22 +286,7 @@
           computed: '_computeIsGenericCloudProvider(cloudProvider)'
         }
       },
-      showError: function(errorTitle, errorMessage) {
-        this.showConnection = false;
-        this.$.errorDialog.open();
-        this.errorText = errorMessage;
-        this.errorTitle = errorTitle;
-      },
-      clearError: function() {
-        this.errorTitle = '';
-        this.errorText = '';
-      },
       doneTapped: function() {
-        if (!this.$.serverConfig.value) {
-          this.showError('',
-              'Please paste the output from the installation process before proceeding.');
-          return;
-        }
         this.showConnection = true;
         this.fire('ManualServerEntered', {
           userInputConfig: this.$.serverConfig.value
@@ -326,9 +301,7 @@
       },
       clear: function() {
         this.$.serverConfig.value = '';
-        this.clearError();
         this.showConnection = false;
-        this.$.errorDialog.close();
         this.$.awsDropDown.hide();
         this.$.gcpDropDown.hide();
       },
