--- a/src/server_manager/ui_components/outline-step-view.html
+++ b/src/server_manager/ui_components/outline-step-view.html
@@ -21,14 +21,17 @@
       :host {
         display: block;
       }
-      .step-header {
+      .step-container {
         padding: 64px 24px 24px;
         vertical-align: middle;
         height: auto;
         text-align: left;
         background-color: #263238;
+        display: flex;
+        flex-direction: column;
       }
       .step-title, .step-description {
+        flex: 1 100%;
         font-size: 20px;
         line-height: 28px;
       }
@@ -39,13 +42,13 @@
         color: var(--medium-gray);
       }
     </style>
-    <div class="step-header">
-      <div class="step-container">
+    <div class="step-container">
+      <div class="step-header">
         <div class="step-title"><slot name="step-title"></slot></div>
         <div class="step-description"><slot name="step-description"></slot></div>
       </div>
+      <slot></slot>
     </div>
-    <slot></slot>
   </template>
   <script>
     Polymer({
