Update DO region selection UI

--- a/src/server_manager/ui_components/app-root.html
+++ b/src/server_manager/ui_components/app-root.html
@@ -43,7 +43,7 @@
     <style>
       :host {
         width: 100%;
-        --primary-green: #00bfa5;
+        --primary-green: #00BFA5;
         --background-color: #263238;
         --background-contrast-color: #2e3a3f;
         --light-gray: rgba(255, 255, 255, 0.87);
@@ -53,8 +53,6 @@
         --status-bar-width: 48px;
       }
       .app-container {
-        display: flex;
-        justify-content: center;
         margin: 0 auto;
       }
       @media (min-width: 1281px) {
