--- a/src/server_manager/ui_components/outline-step-view.html
+++ b/src/server_manager/ui_components/outline-step-view.html
@@ -30,8 +30,14 @@
         display: flex;
         flex-direction: column;
       }
-      .step-title, .step-description {
-        flex: 1 100%;
+      .step-header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+      }
+      .step-text {
+        flex: 2;
+        margin-right: 24px;
         font-size: 20px;
         line-height: 28px;
       }
@@ -41,18 +47,32 @@
       .step-description {
         color: var(--medium-gray);
       }
+      .step-action {
+        display: flex;
+        justify-content: flex-end;
+        flex: 1;
+      }
     </style>
     <div class="step-container">
       <div class="step-header">
-        <div class="step-title"><slot name="step-title"></slot></div>
-        <div class="step-description"><slot name="step-description"></slot></div>
+        <div class="step-text">
+          <div class="step-title"><slot name="step-title"></slot></div>
+          <div class="step-description"><slot name="step-description"></slot></div>
+        </div>
+        <div class="step-action" hidden$="[[!displayAction]]"><slot name="step-action"></slot></div>
       </div>
       <slot></slot>
     </div>
   </template>
   <script>
     Polymer({
-      is: 'outline-step-view'
+      is: 'outline-step-view',
+      properties: {
+        displayAction: {
+          type: Boolean,
+          value: false
+        },
+      },
     });
   </script>
 </dom-module>
