Re-style server progress UI

--- a/src/server_manager/ui_components/outline-region-picker-step.html
+++ b/src/server_manager/ui_components/outline-region-picker-step.html
@@ -69,6 +69,10 @@
         background: var(--primary-green);
         color: #fff;
         text-align: center;
+        font-size: 14px;
+      }
+      paper-button[disabled] {
+        color: var(--medium-gray);
       }
       .flag {
         width: 86px;
